--- a/ecom/package.json
+++ b/ecom/package.json
@@ -10,18 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
-    "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
-    "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.0.6"
   },
