--- a/ecom/package.json
+++ b/ecom/package.json
@@ -16,10 +16,14 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-gravatar": "^2.6.3",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
