--- a/ecom/package.json
+++ b/ecom/package.json
@@ -21,10 +21,12 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
