--- a/ecom/package.json
+++ b/ecom/package.json
@@ -19,6 +19,7 @@
     "react-gravatar": "^2.6.3",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
